manifests/hello-world/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: hello-world
  sessionAffinity: None
  type: ClusterIP
