manifests/hello-world/hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  rules:
  - host: helloworld-CHANGEME.ingress.uka.k8s.pizza
    http:
      paths:
      - backend:
          serviceName: hello-world
          servicePort: 8000
        path: /
